--- a/styles.css
+++ b/styles.css
@@ -876,7 +876,11 @@ video {
 }
 .bg-hint {
   --tw-bg-opacity: 1;
-  background-color: rgb(251 94 82 / var(--tw-bg-opacity, 1));
+  background-color: rgb(207 29 107 / var(--tw-bg-opacity, 1));
+}
+.bg-hint-button {
+  --tw-bg-opacity: 1;
+  background-color: rgb(207 29 107 / var(--tw-bg-opacity, 1));
 }
 .bg-red-600 {
   --tw-bg-opacity: 1;
@@ -1153,9 +1157,9 @@ video {
 /* Tiles locked via hints should have red background */
 .slot.locked .tile,
 .tile.locked {
-  background-color: #FB5E52 !important;
+  background-color: #CF1D6B !important;
   color: #FFFFFF !important;
-  border: 4px solid #FB5E52 !important;
+  border: 4px solid #CF1D6B !important;
 }
 
 /* Selected tile - pink border with bolder outline (separate from focus state) */
@@ -1238,6 +1242,10 @@ video {
     box-sizing: border-box;
   }
 }
+.hover\:bg-hint-button-hover:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(180 20 90 / var(--tw-bg-opacity, 1));
+}
 .hover\:bg-red-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
@@ -1304,9 +1312,9 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(78 46 7 / var(--tw-border-opacity, 1));
 }
-.focus\:bg-hint:focus {
+.focus\:bg-hint-button:focus {
   --tw-bg-opacity: 1;
-  background-color: rgb(251 94 82 / var(--tw-bg-opacity, 1));
+  background-color: rgb(207 29 107 / var(--tw-bg-opacity, 1));
 }
 .focus\:p-4:focus {
   padding: 1rem;
@@ -1324,9 +1332,9 @@ video {
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
-.focus\:ring-hint:focus {
+.focus\:ring-hint-button:focus {
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(251 94 82 / var(--tw-ring-opacity, 1));
+  --tw-ring-color: rgb(207 29 107 / var(--tw-ring-opacity, 1));
 }
 .focus\:ring-indigo-500:focus {
   --tw-ring-opacity: 1;
